--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,10 +38,17 @@
                   </div>
 
                   <div class="form-group">
-                    <button type="submit" 
+                    <button *ngIf="!cargando"
+                            type="submit" 
                             [disabled]="loginForm.invalid"
                             class="btn btn-primary submit-btn btn-block">
                       Login
+                    </button>
+                    <button *ngIf="cargando"
+                            disabled="true"
+                            class="btn btn-primary submit-btn btn-block">
+                      <i class="fa fa-spin fa-sync"></i>
+                      Espere...
                     </button>
                   </div>
                   
